stage3/3D/Stage3DParser.ts

import * as antlr from "antlr4ng";
import { Token } from "antlr4ng";

import { Stage3DListener } from "./Stage3DListener.js";
// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;


export class Stage3DParser extends antlr.Parser {
    public static readonly COMMENT = 1;
    public static readonly LPAREN = 2;
    public static readonly RPAREN = 3;
    public static readonly COMMA = 4;
    public static readonly PROGRAM = 5;
    public static readonly LETSTAR = 6;
    public static readonly LET = 7;
    public static readonly CONSTSTAR = 8;
    public static readonly CONST = 9;
    public static readonly LAMBDA = 10;
    public static readonly FN = 11;
    public static readonly METHOD = 12;
    public static readonly BIND = 13;
    public static readonly METHOD_CALL = 14;
    public static readonly DEF = 15;
    public static readonly DEFMACRO = 16;
    public static readonly IF = 17;
    public static readonly WHILE = 18;
    public static readonly BEGIN = 19;
    public static readonly RETURN = 20;
    public static readonly THROW = 21;
    public static readonly SET = 22;
    public static readonly TERNARY = 23;
    public static readonly COND = 24;
    public static readonly OBJECT = 25;
    public static readonly ARRAY = 26;
    public static readonly OPTCHAIN = 27;
    public static readonly DOT = 28;
    public static readonly INDEX = 29;
    public static readonly NULLCOAL = 30;
    public static readonly QUASI = 31;
    public static readonly QUOTE = 32;
    public static readonly UNQUOTE_SPLICING = 33;
    public static readonly UNQUOTE = 34;
    public static readonly NEW = 35;
    public static readonly IMPORT = 36;
    public static readonly SWITCH = 37;
    public static readonly CASE = 38;
    public static readonly DEFAULT = 39;
    public static readonly FORIN = 40;
    public static readonly FOROF = 41;
    public static readonly FOR = 42;
    public static readonly CLASS_BODY = 43;
    public static readonly SUPER_METHOD = 44;
    public static readonly ABSTRACT_METHOD = 45;
    public static readonly CLASS = 46;
    public static readonly FIELD = 47;
    public static readonly CONSTRUCTOR = 48;
    public static readonly THIS = 49;
    public static readonly SUPER = 50;
    public static readonly GET = 51;
    public static readonly SETPROP = 52;
    public static readonly IMPLEMENTS = 53;
    public static readonly UNION = 54;
    public static readonly INTERSECT = 55;
    public static readonly TUPLE = 56;
    public static readonly TYPEFN = 57;
    public static readonly LIT = 58;
    public static readonly KEYOF = 59;
    public static readonly TYPEOF = 60;
    public static readonly TYPE_AS = 61;
    public static readonly INFER = 62;
    public static readonly MAPPED = 63;
    public static readonly TEMPLATE = 64;
    public static readonly REST = 65;
    public static readonly READONLY = 66;
    public static readonly TYPE_PARAMS = 67;
    public static readonly TYPE_ARGS = 68;
    public static readonly EXTENDS = 69;
    public static readonly RETURNS = 70;
    public static readonly TYPE = 71;
    public static readonly INTERFACE = 72;
    public static readonly MODIFIERS = 73;
    public static readonly OPTIONAL = 74;
    public static readonly BOOLEAN = 75;
    public static readonly NULL = 76;
    public static readonly UNDEFINED = 77;
    public static readonly COLON = 78;
    public static readonly LBRACK = 79;
    public static readonly RBRACK = 80;
    public static readonly EXPORT = 81;
    public static readonly EXPORT_DEFAULT = 82;
    public static readonly EXPORT_NAMED = 83;
    public static readonly EXPORT_FROM = 84;
    public static readonly EXPORT_ALL_FROM = 85;
    public static readonly KEYWORD = 86;
    public static readonly NUMBER = 87;
    public static readonly STRING = 88;
    public static readonly MULTILINE_STRING = 89;
    public static readonly BACKTICK_STRING = 90;
    public static readonly IDENTIFIER = 91;
    public static readonly WS = 92;
    public static readonly RULE_program = 0;
    public static readonly RULE_topLevel = 1;
    public static readonly RULE_defmacro = 2;
    public static readonly RULE_def = 3;
    public static readonly RULE_typeAlias = 4;
    public static readonly RULE_interfaceDef = 5;
    public static readonly RULE_interfaceExtends = 6;
    public static readonly RULE_classDef = 7;
    public static readonly RULE_classExtends = 8;
    public static readonly RULE_classImplements = 9;
    public static readonly RULE_classBody = 10;
    public static readonly RULE_classElement = 11;
    public static readonly RULE_fieldDef = 12;
    public static readonly RULE_constructorDef = 13;
    public static readonly RULE_classMethodDef = 14;
    public static readonly RULE_abstractMethodDef = 15;
    public static readonly RULE_getterDef = 16;
    public static readonly RULE_setterDef = 17;
    public static readonly RULE_modifier = 18;
    public static readonly RULE_typedParam = 19;
    public static readonly RULE_fnSignatureTyped = 20;
    public static readonly RULE_statement = 21;
    public static readonly RULE_letStar = 22;
    public static readonly RULE_letStmt = 23;
    public static readonly RULE_constStar = 24;
    public static readonly RULE_constStmt = 25;
    public static readonly RULE_ifForm = 26;
    public static readonly RULE_whileForm = 27;
    public static readonly RULE_block = 28;
    public static readonly RULE_returnForm = 29;
    public static readonly RULE_throwForm = 30;
    public static readonly RULE_importForm = 31;
    public static readonly RULE_exportForm = 32;
    public static readonly RULE_exportBinding = 33;
    public static readonly RULE_exportDefault = 34;
    public static readonly RULE_exportNamed = 35;
    public static readonly RULE_exportNamePair = 36;
    public static readonly RULE_exportFrom = 37;
    public static readonly RULE_exportAllFrom = 38;
    public static readonly RULE_starBinding = 39;
    public static readonly RULE_singleBinding = 40;
    public static readonly RULE_typeExpr = 41;
    public static readonly RULE_typeUnion = 42;
    public static readonly RULE_typeIntersection = 43;
    public static readonly RULE_typeArray = 44;
    public static readonly RULE_typeTuple = 45;
    public static readonly RULE_typeTupleElement = 46;
    public static readonly RULE_typeFunction = 47;
    public static readonly RULE_typeFnParam = 48;
    public static readonly RULE_typeObject = 49;
    public static readonly RULE_typeProp = 50;
    public static readonly RULE_propModifier = 51;
    public static readonly RULE_typeLiteral = 52;
    public static readonly RULE_typeKeyof = 53;
    public static readonly RULE_typeTypeof = 54;
    public static readonly RULE_typeIndexAccess = 55;
    public static readonly RULE_typeConditional = 56;
    public static readonly RULE_typeInfer = 57;
    public static readonly RULE_typeMapped = 58;
    public static readonly RULE_mappedModifiers = 59;
    public static readonly RULE_mappedModifier = 60;
    public static readonly RULE_typeTemplateLiteral = 61;
    public static readonly RULE_templatePart = 62;
    public static readonly RULE_typeApplication = 63;
    public static readonly RULE_typeParams = 64;
    public static readonly RULE_typeParamDecl = 65;
    public static readonly RULE_typeParamConstraint = 66;
    public static readonly RULE_typeParamDefault = 67;
    public static readonly RULE_assign = 68;
    public static readonly RULE_switchForm = 69;
    public static readonly RULE_caseClause = 70;
    public static readonly RULE_defaultClause = 71;
    public static readonly RULE_forForm = 72;
    public static readonly RULE_forInForm = 73;
    public static readonly RULE_forOfForm = 74;
    public static readonly RULE_expression = 75;
    public static readonly RULE_typeofExpr = 76;
    public static readonly RULE_typeAssert = 77;
    public static readonly RULE_thisExpr = 78;
    public static readonly RULE_superConstructorCall = 79;
    public static readonly RULE_superMethodCall = 80;
    public static readonly RULE_lambda = 81;
    public static readonly RULE_fn = 82;
    public static readonly RULE_bindExpr = 83;
    public static readonly RULE_methodCallExpr = 84;
    public static readonly RULE_ternary = 85;
    public static readonly RULE_condExpr = 86;
    public static readonly RULE_newForm = 87;
    public static readonly RULE_objectExpr = 88;
    public static readonly RULE_objectField = 89;
    public static readonly RULE_objectMethodDef = 90;
    public static readonly RULE_arrayExpr = 91;
    public static readonly RULE_propKey = 92;
    public static readonly RULE_propAccess = 93;
    public static readonly RULE_indexAccess = 94;
    public static readonly RULE_quasiquote = 95;
    public static readonly RULE_unquote = 96;
    public static readonly RULE_unquoteSplicing = 97;
    public static readonly RULE_optChain = 98;
    public static readonly RULE_nullCoalesce = 99;
    public static readonly RULE_call = 100;
    public static readonly RULE_typeArgs = 101;
    public static readonly RULE_fnSignature = 102;
    public static readonly RULE_param = 103;
    public static readonly RULE_literal = 104;

    public static readonly literalNames = [
        null, null, "'('", "')'", "','", "'program'", "'let*'", "'let'", 
        "'const*'", "'const'", "'lambda'", "'fn'", "'method'", "'bind'", 
        "'method-call'", "'def'", "'defmacro'", "'if'", "'while'", "'begin'", 
        "'return'", "'throw'", "'set!'", "'ternary'", "'cond'", "'object'", 
        "'array'", "'.?'", "'.'", "'index'", "'??'", "'quasi'", "'quote'", 
        "'unquote-splicing'", "'unquote'", "'new'", "'import'", "'switch'", 
        "'case'", "'default'", "'for-in'", "'for-of'", "'for'", "'class-body'", 
        "'super-method'", "'abstract-method'", "'class'", "'field'", "'constructor'", 
        "'this'", "'super'", "'get'", "'set'", "'implements'", "'union'", 
        "'intersect'", "'tuple'", "'tfn'", "'tlit'", "'keyof'", "'typeof'", 
        "'type-as'", "'infer'", "'mapped'", "'template'", "'rest'", "'readonly'", 
        "'type-params'", "'type-args'", "'extends'", "'returns'", "'type'", 
        "'interface'", "'modifiers'", "'?'", null, "'null'", "'undefined'", 
        "':'", "'['", "']'", "'export'", "'export-default'", "'export-named'", 
        "'export-from'", "'export-all-from'"
    ];

    public static readonly symbolicNames = [
        null, "COMMENT", "LPAREN", "RPAREN", "COMMA", "PROGRAM", "LETSTAR", 
        "LET", "CONSTSTAR", "CONST", "LAMBDA", "FN", "METHOD", "BIND", "METHOD_CALL", 
        "DEF", "DEFMACRO", "IF", "WHILE", "BEGIN", "RETURN", "THROW", "SET", 
        "TERNARY", "COND", "OBJECT", "ARRAY", "OPTCHAIN", "DOT", "INDEX", 
        "NULLCOAL", "QUASI", "QUOTE", "UNQUOTE_SPLICING", "UNQUOTE", "NEW", 
        "IMPORT", "SWITCH", "CASE", "DEFAULT", "FORIN", "FOROF", "FOR", 
        "CLASS_BODY", "SUPER_METHOD", "ABSTRACT_METHOD", "CLASS", "FIELD", 
        "CONSTRUCTOR", "THIS", "SUPER", "GET", "SETPROP", "IMPLEMENTS", 
        "UNION", "INTERSECT", "TUPLE", "TYPEFN", "LIT", "KEYOF", "TYPEOF", 
        "TYPE_AS", "INFER", "MAPPED", "TEMPLATE", "REST", "READONLY", "TYPE_PARAMS", 
        "TYPE_ARGS", "EXTENDS", "RETURNS", "TYPE", "INTERFACE", "MODIFIERS", 
        "OPTIONAL", "BOOLEAN", "NULL", "UNDEFINED", "COLON", "LBRACK", "RBRACK", 
        "EXPORT", "EXPORT_DEFAULT", "EXPORT_NAMED", "EXPORT_FROM", "EXPORT_ALL_FROM", 
        "KEYWORD", "NUMBER", "STRING", "MULTILINE_STRING", "BACKTICK_STRING", 
        "IDENTIFIER", "WS"
    ];
    public static readonly ruleNames = [
        "program", "topLevel", "defmacro", "def", "typeAlias", "interfaceDef", 
        "interfaceExtends", "classDef", "classExtends", "classImplements", 
        "classBody", "classElement", "fieldDef", "constructorDef", "classMethodDef", 
        "abstractMethodDef", "getterDef", "setterDef", "modifier", "typedParam", 
        "fnSignatureTyped", "statement", "letStar", "letStmt", "constStar", 
        "constStmt", "ifForm", "whileForm", "block", "returnForm", "throwForm", 
        "importForm", "exportForm", "exportBinding", "exportDefault", "exportNamed", 
        "exportNamePair", "exportFrom", "exportAllFrom", "starBinding", 
        "singleBinding", "typeExpr", "typeUnion", "typeIntersection", "typeArray", 
        "typeTuple", "typeTupleElement", "typeFunction", "typeFnParam", 
        "typeObject", "typeProp", "propModifier", "typeLiteral", "typeKeyof", 
        "typeTypeof", "typeIndexAccess", "typeConditional", "typeInfer", 
        "typeMapped", "mappedModifiers", "mappedModifier", "typeTemplateLiteral", 
        "templatePart", "typeApplication", "typeParams", "typeParamDecl", 
        "typeParamConstraint", "typeParamDefault", "assign", "switchForm", 
        "caseClause", "defaultClause", "forForm", "forInForm", "forOfForm", 
        "expression", "typeofExpr", "typeAssert", "thisExpr", "superConstructorCall", 
        "superMethodCall", "lambda", "fn", "bindExpr", "methodCallExpr", 
        "ternary", "condExpr", "newForm", "objectExpr", "objectField", "objectMethodDef", 
        "arrayExpr", "propKey", "propAccess", "indexAccess", "quasiquote", 
        "unquote", "unquoteSplicing", "optChain", "nullCoalesce", "call", 
        "typeArgs", "fnSignature", "param", "literal",
    ];

    public get grammarFileName(): string { return "Stage3D.g4"; }
    public get literalNames(): (string | null)[] { return Stage3DParser.literalNames; }
    public get symbolicNames(): (string | null)[] { return Stage3DParser.symbolicNames; }
    public get ruleNames(): string[] { return Stage3DParser.ruleNames; }
    public get serializedATN(): number[] { return Stage3DParser._serializedATN; }

    protected createFailedPredicateException(predicate?: string, message?: string): antlr.FailedPredicateException {
        return new antlr.FailedPredicateException(this, predicate, message);
    }

    public constructor(input: antlr.TokenStream) {
        super(input);
        this.interpreter = new antlr.ParserATNSimulator(this, Stage3DParser._ATN, Stage3DParser.decisionsToDFA, new antlr.PredictionContextCache());
    }
    public program(): ProgramContext {
        let localContext = new ProgramContext(this.context, this.state);
        this.enterRule(localContext, 0, Stage3DParser.RULE_program);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 210;
            this.match(Stage3DParser.LPAREN);
            this.state = 211;
            this.match(Stage3DParser.PROGRAM);
            this.state = 215;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 2 || ((((_la - 49)) & ~0x1F) === 0 && ((1 << (_la - 49)) & 469762049) !== 0) || ((((_la - 86)) & ~0x1F) === 0 && ((1 << (_la - 86)) & 55) !== 0)) {
                {
                {
                this.state = 212;
                this.topLevel();
                }
                }
                this.state = 217;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 218;
            this.match(Stage3DParser.RPAREN);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public topLevel(): TopLevelContext {
        let localContext = new TopLevelContext(this.context, this.state);
        this.enterRule(localContext, 2, Stage3DParser.RULE_topLevel);
        try {
            this.state = 226;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 1, this.context) ) {
            case 1:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 220;
                this.defmacro();
                }
                break;
            case 2:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 221;
                this.def();
                }
                break;
            case 3:
                this.enterOuterAlt(localContext, 3);
                {
                this.state = 222;
                this.typeAlias();
                }
                break;
            case 4:
                this.enterOuterAlt(localContext, 4);
                {
                this.state = 223;
                this.interfaceDef();
                }
                break;
            case 5:
                this.enterOuterAlt(localContext, 5);
                {
                this.state = 224;
                this.classDef();
                }
                break;
            case 6:
                this.enterOuterAlt(localContext, 6);
                {
                this.state = 225;
                this.statement();
                }
                break;
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public defmacro(): DefmacroContext {
        let localContext = new DefmacroContext(this.context, this.state);
